# ChangeLog for app-i18n/nkf
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.50 2011/10/11 11:02:19 naota Exp $

  11 Oct 2011; Naohiro Aota <naota@gentoo.org> nkf-2.1.0-r1.ebuild:
  Add ~x86-fbsd

  06 Jun 2011; MATSUU Takuto <matsuu@gentoo.org> -nkf-2.0.7-r1.ebuild,
  -nkf-2.1.0.ebuild, nkf-2.1.0-r1.ebuild:
  Fixed USE="-python" issue, bug #311215. Removed old revisions.

*nkf-2.1.0-r1 (31 May 2011)

  30 May 2011; MATSUU Takuto <matsuu@gentoo.org> +nkf-2.1.0-r1.ebuild:
  Fixed python handling, bug #311215.

  23 Apr 2011; Fabian Groffen <grobian@gentoo.org> nkf-2.1.0.ebuild:
  Marked ~x86-macos, bug #360273

  08 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  nkf-2.0.7.ebuild, nkf-2.0.7-r1.ebuild, nkf-2.1.0.ebuild:
  Fix deprecation warnings.

*nkf-2.1.0 (23 Jan 2010)

  23 Jan 2010; MATSUU Takuto <matsuu@gentoo.org> +nkf-2.1.0.ebuild:
  Version bumped.

*nkf-2.0.7-r1 (08 Dec 2008)

  08 Dec 2008; MATSUU Takuto <matsuu@gentoo.org> +nkf-2.0.7-r1.ebuild:
  Fixed pre-strip, bug #248725. Clean up.

  17 Sep 2007; Akinori Hattori <hattya@gentoo.org> -files/nkf-python.patch,
  -nkf-2.0.4.ebuild, -nkf-2.0.5-r1.ebuild, -nkf-2.0.7_beta1.ebuild:
  cleaned out old ebuilds.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> nkf-2.0.7.ebuild:
  ppc. stable

  01 Jun 2007; nixnut <nixnut@gentoo.org> ChangeLog:
  Stable on ppc wrt bug 178899

  21 May 2007; Jeroen Roovers <jer@gentoo.org> nkf-2.0.7.ebuild:
  Stable for HPPA (bug #178899).

  20 May 2007; Raúl Porcel <armin76@gentoo.org> nkf-2.0.7.ebuild:
  alpha/ia64 stable wrt #178899

  19 May 2007; Christian Faulhammer <opfer@gentoo.org> nkf-2.0.7.ebuild:
  stable x86/amd64, bug 178899

  19 May 2007; Markus Rothe <corsair@gentoo.org> nkf-2.0.7.ebuild:
  Stable on ppc64; bug #178899

  18 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> nkf-2.0.7.ebuild:
  Stable on sparc wrt #178899

*nkf-2.0.7 (06 Jan 2007)
