@@ -1,18 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST NKF_python.tgz 2242 RMD160 759979ff4ade90b409439e7038f21a88bb14e46b SHA1 4ed0638d1d418da0d41a077eb6f8fcdfcfac16f0 SHA256 4dcf34edbd5baf5aabd9e0cd439ca342a99b92c6748311ab693e9277d40d552b
 DIST NKF_python20090602.tgz 2318 RMD160 a2697bcee3ae903456428def80dbacbdd9345a37 SHA1 659c4321e680398915ff7e9632c3b4ca61353ee1 SHA256 c86336e52398d836d6db4f9f169d11b4003ac02681b5e3395cd64c7823beb504
 DIST nkf-2.1.0.tar.gz 156716 RMD160 77cf750e00fbc6b7b2178a25c152a4ed7b623a35 SHA1 6c88c12d973abbdb4c61ade47a470e01f7bbcc95 SHA256 a6e59bf0ebb9a1dbb3e9fc62302d0b19aefc6f5ccee0321b33fb47483ce636e8
+DIST nkf-2.1.2.tar.gz 158127 RMD160 91c0d413a70299246591d314d33f45e71eba51a7 SHA1 ca301d84e57787f566c933c2a1511f600183c8f1 SHA256 034e8b676160fa7cfaf023ad130ce2d7a7309e917c8f41b308e9dc2f6218a0a6
 DIST nkf207.tar.gz 150501 RMD160 da6eebf7dd59d934eca40f2f6588e97078c8d68a SHA1 97ee0920a5cd935acd08ca789c7b8c810a594311 SHA256 71d2ba992df209a00bb1dca45e3336729dc16e51b71526bd20f897cc6127a275
 EBUILD nkf-2.0.7.ebuild 1454 RMD160 64fc9b49769462e487be3f827250940cd6ce723d SHA1 d3f77626a41f13e4a4444b3c0b681b77f524aa83 SHA256 1658f9fedb2331032c532ce1eb86d1bc5bc69171a37b6b6361c920760cb8ad17
 EBUILD nkf-2.1.0-r1.ebuild 1801 RMD160 252af4fef84915cb3ed2b1d187eaeb3c05a55073 SHA1 93c37f48402766213f71f7fd494500b583981273 SHA256 63ee7d06900377dce0bf1d0b58a78e27885c61919f269af82c33c3db77bc357a
-MISC ChangeLog 5822 RMD160 7f80902c44558abb4e4c7300a4a2301decd6c121 SHA1 699ab8347da74978ab8d58a88b3e623e088ba125 SHA256 3949ac72eae5e9700c6a31efccde7fdc669450a9670507220c85951d7403265c
+EBUILD nkf-2.1.2.ebuild 1798 RMD160 fbe3781940d8f3726a2d3aad83a22b5288d0ae90 SHA1 0e82117c18482bcb579750ca97308145d40b5644 SHA256 baf68da6971595cd44c90aa29a74152643540784ee3ef411504c3a892d6cd1a7
+MISC ChangeLog 5941 RMD160 f260dda77010341f49ef0126c5cb7d75b1780314 SHA1 d88834b784d48319915dd1e4f2daf9ab8a8fc3aa SHA256 b0c49cab4e4d4ffc0fa58f0a5384a2fb8f524e85715b6689026a09282f8293f9
 MISC metadata.xml 156 RMD160 8adcf0a760a605cd42501f53097ca3a1c4e8daad SHA1 8ccc2b0f20743002b783b1f7b5162c71f7f54c2e SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (FreeBSD)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk6UIkwACgkQGpDnPLSHuMAINACeOoNyLsHib0ow4Ye4w3bxeUcK
-FvoAoOsCvA2cXIAH0xcZKRcMMmhTG6DS
-=/me6
+iQIcBAEBCAAGBQJOyRmZAAoJEDYO1FT4VRUUFJ8QAJYQNi/w9e8QcjPtA/LnGQy7
+OBfYW+N9Z0K5RQ/OYrlrX5NGRDi+NJCq0RJLoKTXal0fSWSy/8J98NPPKd6IlayU
+IDRWqoJLpOw5nLBm4UIX4Rk4MhMQPtc5ZKobK0kJzlHPpVir8C2ujLACSm16xlJn
+giPBqQ9dIMTSJSqZvcpH2iuDVcABZ5w9U9wqd5fZnwfIBcydO9k9kDrkJiwOkRGX
+KlTBwtR50Q/08yzU7hSPY4qnarPUJgFcTQmpGf24TiHJbdLlWwjZwu0ky1Qr3vp8
+dvq3t+cWEHhVUcItAVznUf+x9ix8GuKxu9rGSGsxblJS68tI9Ie3X9N9W9IeO7Uy
+c5um+tPPUYvDQV1VnIql6Fzt4DavQQRGCRrgkohAf30iOL4Ic2frbT45OvDULIxk
+B6rbf7L/LjmyXQdn2N4bOcah9y74ng8HfIaEJbjsz4A8Hp+C0fY6USsGE5isgWng
+Ln1tCzHrZK49incJpMGConEnsnJQHKXmrWzMLqDRxZaukjU5T3m1LM7yiR5igVqq
+YTC2Q/7EUJ+UZMdD4YZsgJU+aTmNKjL/qCDo+bIL7HtxofZ+Js6UBm72Hqdwq24I
+CoTxZnX9LufUeo6Wzi1PtvpZJYOYPtuIbJwEALU9f+POZreP7EjLTNz3wMxyFCrx
+wb7fhv0rIIydqzim559J
+=wMz7
 -----END PGP SIGNATURE-----
