@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Load-XS/Class-Load-XS-0.30.0.ebuild,v 1.1 2011/11/19 20:15:58 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Load-XS/Class-Load-XS-0.30.0.ebuild,v 1.2 2011/11/20 17:08:18 grobian Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ DESCRIPTION="XS implementation of parts of Class::Load"
 
 LICENSE="Artistic-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~x86 ~x64-macos"
 IUSE="test"
 
 RDEPEND="
