@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST Class-Load-XS-0.02.tar.gz 54551 RMD160 556f9d85a1128cbe26cd43eb87a3ec1318675fd0 SHA1 83dded9980b7e217cf3e1dcab4948d4cafc27223 SHA256 fdf1d575622cb3675dad7d588d787eb1ff223538faedc09e39ee4b8859fd9053
 DIST Class-Load-XS-0.03.tar.gz 54629 RMD160 c6ae70fe74ae3d29993bdd6d8decd9bc2471d569 SHA1 2b3f2adef5039003f04b751d0787cb31f718c28e SHA256 28a7f950cf7d2a419468cb9f263410427774e8b94740fc0aad1b9a4faa736ecc
 EBUILD Class-Load-XS-0.20.0.ebuild 612 RMD160 defbbbb6961cba8001ad169a1eedf78b1e724851 SHA1 12aff5346551467482094d13ca582b7b4e877657 SHA256 32f980980aae86f42ff32360237934ca9470b92e16bf736941de198a29717b81
-EBUILD Class-Load-XS-0.30.0.ebuild 612 RMD160 2aabf1f57c8e81e8fcdf3aad1355676eb8af6a58 SHA1 538f58ea41bcfdd5a14dbbb2ccb5fe18d6e0b12d SHA256 80d5a7d48ea738345dee2c4223caee58c0df9acf31c1291bfdde4e10e597e225
-MISC ChangeLog 506 RMD160 016f3378e4cb877a8d189872f464a2de42a68397 SHA1 c07a8ed97fd0c6925d7b053371c0e694f3a2a748 SHA256 495aa79863cd5e020075adc6f72d04bd6d34de1aec5a0e3823b054a1672f9122
+EBUILD Class-Load-XS-0.30.0.ebuild 626 RMD160 2d0c0e91a7f3906fb43e9d4eef0e6b4bbb50f549 SHA1 ea155524ae3a62d92ad2c3fc9a959e82dc94cc42 SHA256 a4819d8979621d681391743aadc198160e84b1a0395fbff2f36c30644f1845df
+MISC ChangeLog 610 RMD160 66478049b5ce59e203ab166128bfd2d4041cdc88 SHA1 7e5115c65e1f2ebd338c33934757092b0b486cd9 SHA256 8a5dc3e553a9bc56300a52eb77554065d972b2e0bf42906a98fab0d4620adf28
 MISC metadata.xml 239 RMD160 8ff42a2d4f3f0a6d11e22d0fb56c75a9963ab09e SHA1 a44b486fed5e4b6bb8f940a15770353ecf2efad5 SHA256 551693b598ac19fdcc0a8150ee78ef752f34c8e195b2369cdbe2be37841c8f2b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.18 (Darwin)
 
-iEYEAREIAAYFAk7IDoQACgkQV3J2n04EauyJpgCgz7h9essy3ASzuLm+3ZSmeWkm
-w1cAn04RucSFD++YFu35ahY05L2Aajre
-=HBH1
+iEYEARECAAYFAk7JNAgACgkQX3X2B8XHTonMOgCbBnEJrIpxwDnJBhqE9PEa13Il
+iU8AnRTjpFiuE57hFook5UVtQcWAhXJ0
+=2sDU
 -----END PGP SIGNATURE-----
