@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Class-Load-XS
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Load-XS/ChangeLog,v 1.2 2011/11/19 20:15:58 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Load-XS/ChangeLog,v 1.3 2011/11/20 17:08:18 grobian Exp $
+
+  20 Nov 2011; Fabian Groffen <grobian@gentoo.org> Class-Load-XS-0.30.0.ebuild:
+  Marked ~x64-macos
 
 *Class-Load-XS-0.30.0 (19 Nov 2011)
 
