@@ -1,6 +1,11 @@
 # ChangeLog for app-i18n/nkf
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.50 2011/10/11 11:02:19 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/nkf/ChangeLog,v 1.51 2011/11/20 15:15:34 naota Exp $
+
+*nkf-2.1.2 (20 Nov 2011)
+
+  20 Nov 2011; Naohiro Aota <naota@gentoo.org> +nkf-2.1.2.ebuild:
+  Version bumped. #389231
 
   11 Oct 2011; Naohiro Aota <naota@gentoo.org> nkf-2.1.0-r1.ebuild:
   Add ~x86-fbsd
